# sneaker-release-aggregator

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: refresh.yml  weekly-report.yml
src/sneaker_aggregator/: __init__.py  analysis.py  config.py  email_sender.py  main.py  models.py  refresh.py  report.py  supabase_sink.py
src/sneaker_aggregator/sources/: kicksdb.py  sneakerjagers.py
supabase/: schema.sql
templates/: report.html.j2
tests/: test_analysis.py  test_sneakerjagers.py
web/: .env.local.example  .gitignore  README.md  next.config.js  package.json
web/app/: globals.css  layout.tsx  page.tsx  release-list.tsx
web/app/api/raffles/: route.ts
web/app/api/shoe/: route.ts
web/app/shoe/[sku]/: live-market.tsx  page.tsx  raffle-finder.tsx
web/lib/: format.ts  supabase.ts  types.ts
