[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sneaker-aggregator"
version = "0.1.0"
description = "Aggregate Nike/Jordan sneaker releases and email weekly resale-flip opportunities."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Headless-browser fallback for the Sneakerjagers raffle lookup.
headless = ["playwright>=1.44"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
